settings improve and add tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-django>=2.1.6
-djangorestframework
-django-cors-headers==2.4.0
+Django==3.0.7
+djangorestframework==3.11.0
+djangorestframework-simplejwt==4.4.0
+django-cors-headers==3.3.0
 requests==2.20.1
 elasticsearch==6.3.1
-drf_util==0.0.12
-drf-yasg==1.11.0
+drf-util==0.0.12
+drf-yasg==1.17.1
 flex==6.13.2
 swagger-spec-validator==2.4.1
-blinker
-Faker
-coverage
-django-nose
-django-extensions
-djangorestframework_simplejwt
+blinker==1.4
+Faker==4.1.0
+coverage==5.1
+django-nose==1.4.6
+django-extensions==2.2.9
