--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==3.1.13
 djangorestframework==3.11.2
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt==4.5.0
 django-cors-headers==3.3.0
 requests==2.20.1
 elasticsearch==6.3.1
@@ -13,3 +13,4 @@ Faker==4.1.0
 coverage==5.1
 django-nose==1.4.6
 django-extensions==2.2.9
+jsonschema==3.2.0
