--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-cors-headers = "4.4.0"
 drf-spectacular = "0.27.2"
 pre-commit = "^3.8.0"
 ruff = "^0.5.5"
+coverage = "^7.6.1"
 
 
 [build-system]
