--- a/.github/workflows/django_test.yml
+++ b/.github/workflows/django_test.yml
@@ -43,4 +43,9 @@ jobs:
         run: |
           poetry run coverage xml
           poetry run coverage html
-      
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-html-report
+          path: htmlcov/
