--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
-django = "4.2.14"
-djangorestframework = "3.15.2"
-djangorestframework-simplejwt = "5.3.1"
-django-cors-headers = "4.4.0"
-drf-spectacular = "0.27.2"
-pre-commit = "^3.8.0"
-ruff = "^0.5.5"
+python = "~3.12"
+django = "~4.2"
+djangorestframework = "~3.15"
+djangorestframework-simplejwt = "~5.3"
+django-cors-headers = "~4.4"
+drf-spectacular = "~0.27"
+pre-commit = "~3.8"
+ruff = "~0.6"
 
 
 [build-system]
