--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,18 @@ indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
 
+[tool.coverage.run]
+omit = [
+    "*/tests.py",
+    "*/__init__.py",
+    "*/admin.py",
+    "*/apps.py",
+    "*/urls.py",
+    "*/wsgi.py",
+    "*/asgi.py",
+    "*/settings.py",
+    "*/manage.py",
+    "*/celery.py",
+    "*/migrations.py",
+    "*/migrations/*",
+]
